--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 	display: grid;
 	grid-template-areas:
 	"logo text"
-	"menu text";
+	"menu text"
+	"footer footer";
 	grid-gap: 30px;
 	padding: 30px;
 }
@@ -22,4 +23,8 @@
 
 .text {
 	grid-area: text;
+}
+
+.footer {
+	grid-area: footer;
 }
