--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
 	font-family: sans-serif;
-	font-size: 2vw;
 }
 
 .grid {
@@ -27,4 +26,5 @@
 
 .footer {
 	grid-area: footer;
+	text-align: center;
 }
