--- a/style.css
+++ b/style.css
@@ -13,12 +13,12 @@ a:visited {
 }
 
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
   color: grey;
 }
 
 a:active {
-  text-decoration: underline;
+  text-decoration: none;
   color: grey;
 } 
 
