--- a/style.css
+++ b/style.css
@@ -26,12 +26,12 @@ a:visited {
 
 a:hover {
   text-decoration: none;
-  color: grey;
+  color: darkblue;
 }
 
 a:active {
   text-decoration: none;
-  color: grey;
+  color: darkblue;
 } 
 
 .grid {
