--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ p {
 	font-size: 1.3vw;
 }
 
+code {
+	font-family: monospace;
+}
+
+pre {
+	margin: 30px;
+	padding: 10px;
+	background-color: lightgrey;
+}
+
 a:link {
   text-decoration: none;
   color: black;
