--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ pre {
 	background-color: lightgrey;
 }
 
+blockquote {
+	padding: 0 1em;
+	color: #6a737d;
+	border-left: .25em solid #dfe2e5;
+}
+
 a:link {
 	text-decoration: none;
 	color: black;
