--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ a:active {
 
 .grid {
 	display: grid;
+	grid-template-rows: 30vh auto;
 	grid-template-columns: 20vw auto;
 	grid-template-areas:
 	"logo text"
