--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ a:active {
 
 .grid {
 	display: grid;
-	grid-template-rows: 30vmin auto;
+	grid-template-rows: 30vmin 80vmin;
 	grid-template-columns: 20vmax auto;
 	grid-template-areas:
 	"logo text"
