--- a/style.css
+++ b/style.css
@@ -3,30 +3,30 @@
 }
 
 h1 {
-	font-size: 2.5vmax;
+	font-size: 30px;
 }
 
 h2 {
-	font-size: 2vmax;
+	font-size: 25px;
 }
 
 h3 {
-	font-size: 1.5vmax;
+	font-size: 20;
 }
 
 i {
-	font-size: 0.6vmax;
+	font-size: 15px;
 }
 
 p {
-	font-size: 1vmax;
+	font-size: 15px;
 }
 
 code {
 	font-family: monospace;
-	font-size: 1vmax;
+	font-size: 15px;
 	background-color: lightgrey;
-	padding: 2px;
+	padding: 5px;
 }
 
 pre {
@@ -36,13 +36,13 @@ pre {
 }
 
 blockquote {
-	padding: 0 1em;
-	border-left: .25em solid lightgrey;
+	padding: 0 5px;
+	border-left: 1px solid lightgrey;
 	margin-left: 0;
 }
 
 li {
-	font-size: 1.3vmax;
+	font-size: 13px;
 }
 
 a:link {
@@ -67,8 +67,8 @@ a:active {
 
 .grid {
 	display: grid;
-	grid-template-rows: 30vmin auto;
-	grid-template-columns: 20vmax auto;
+	grid-template-rows: 200px auto;
+	grid-template-columns: 200px auto;
 	grid-template-areas:
 	"logo ugly"
 	"menu text";
