--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ li {
 }
 
 a {
-	color: blue;
+	color: #230090;
 }
 
 a:link {
@@ -56,7 +56,7 @@ a:link {
 
 a:hover {
 	text-decoration: none;
-	color: #2e3192;
+	color: blue;
 }
 
 a:active {
